--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="<%= context.config.publicPath %>favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="192x192" href="<%= context.config.publicPath %>favicons/android-icon-192x192.png">
     <link rel="apple-touch-icon" sizes="180x180" href="<%= context.config.publicPath %>favicons/apple-touch-icon-180x180.png">
-    <link rel="stylesheet" href="https://fonts.lug.ustc.edu.cn/css2?family=Inter:wght@300;400;500;600;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
   </head>
   <body>
 
